--- a/eCommerce/eCommerce/eCommerce.csproj
+++ b/eCommerce/eCommerce/eCommerce.csproj
@@ -184,6 +184,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -197,6 +199,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\Address.cs">
+      <DependentUpon>eCommerceModel1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Category.cs">
       <DependentUpon>eCommerceModel1.tt</DependentUpon>
     </Compile>
@@ -217,6 +222,15 @@
       <DependentUpon>eCommerceModel1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Image.cs">
+      <DependentUpon>eCommerceModel1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Order.cs">
+      <DependentUpon>eCommerceModel1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\OrderLine.cs">
+      <DependentUpon>eCommerceModel1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Payment.cs">
       <DependentUpon>eCommerceModel1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Product.cs">
@@ -387,6 +401,8 @@
     <Content Include="Views\Supplier\DeleteConfirmed.cshtml" />
     <Content Include="Views\Supplier\Edit.cshtml" />
     <Content Include="Views\Shop\ByProduct.cshtml" />
+    <Content Include="Views\Cart\MiniCart.cshtml" />
+    <Content Include="Views\Shop\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
